[package]
name = "tf2-wasm-demo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tf-demo-parser = { rev = "b328db85e9", git = "https://codeberg.org/demostf/parser" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"